# RustWebAct

./: Cargo.toml  LICENSE  README.md
examples/hud/: Cargo.toml
examples/hud/js/: index.js
examples/hud/src/: hud_html.rs  hud_state.rs  lib.rs
examples/hud/static/: index.html
examples/ntp/: Cargo.toml
examples/ntp/src/: lib.rs
examples/ntp/static/: index.html
examples/ntp_ftfy/: Cargo.toml  package-lock.json
examples/ntp_ftfy/src/: lib.rs
examples/ntp_ftfy/static/: index.html
src/: lib.rs  rwa_html.rs  rwa_time.rs
