[package]
name = "rustwebact"
version = "0.2.3"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Reactive Actor Web Apps for Rust on the Web"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/RustWebAct"

[dependencies]
serde_json = "1.0.0"
wasm-bindgen = "0.2.45"
jsmx = "0.3.1"
rdxl = "0.1.16"

[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
