[package]
name = "hud"
description = "A UI for the Really Awesome Game"
version = "0.1.0"
authors = ["Andrew Johnson <andrew@subarctic.org>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
serde_json = "1.0.0"
jsmx = "0.3.1"
rdxl = "0.1.18"
rustwebact = {path = "../../"}
htmlescape = "0.3.1"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dependencies.wasm-bindgen]
version = "0.2.45"
features = ["serde-serialize"]
